[gd_scene load_steps=46 format=3 uid="uid://c18xgpf54aevr"]

[ext_resource type="Script" path="res://enemy.gd" id="1_s0cnt"]
[ext_resource type="AudioStream" uid="uid://chumylvqy1ykg" path="res://SoundEffect/Zombie_hit (online-audio-converter.com).mp3" id="2_12qmh"]
[ext_resource type="Texture2D" uid="uid://dhgnoonf6cxoa" path="res://EnemyAssets/Zombie Woman/Attack_1.png" id="2_vksj7"]
[ext_resource type="Texture2D" uid="uid://c32jx0cd36rq5" path="res://EnemyAssets/Zombie Woman/Dead.png" id="3_geku2"]
[ext_resource type="AudioStream" uid="uid://by8n67u15as6v" path="res://27_sword_miss_2.wav" id="3_t6bur"]
[ext_resource type="Texture2D" uid="uid://yypc5xcxhbis" path="res://EnemyAssets/Zombie Woman/Hurt.png" id="4_6q5rq"]
[ext_resource type="AudioStream" uid="uid://bpssu6b827j45" path="res://21_orc_damage_2.wav" id="4_37lhw"]
[ext_resource type="Texture2D" uid="uid://566fux4v30xj" path="res://EnemyAssets/Zombie Woman/Idle.png" id="5_u6hli"]
[ext_resource type="Texture2D" uid="uid://cbq6t63wl4gjm" path="res://EnemyAssets/Zombie Woman/Run.png" id="6_1uuf7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kimi3"]
size = Vector2(20, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjmsl"]
atlas = ExtResource("2_vksj7")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_2u5db"]
atlas = ExtResource("2_vksj7")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ad501"]
atlas = ExtResource("2_vksj7")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wcy3"]
atlas = ExtResource("2_vksj7")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqgp8"]
atlas = ExtResource("3_geku2")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mfta"]
atlas = ExtResource("3_geku2")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_a24o2"]
atlas = ExtResource("3_geku2")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ytk7"]
atlas = ExtResource("3_geku2")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_koum7"]
atlas = ExtResource("3_geku2")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_vacyg"]
atlas = ExtResource("4_6q5rq")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_uyyve"]
atlas = ExtResource("4_6q5rq")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xeqv"]
atlas = ExtResource("4_6q5rq")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_i77ns"]
atlas = ExtResource("5_u6hli")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7la3g"]
atlas = ExtResource("5_u6hli")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_yatc6"]
atlas = ExtResource("5_u6hli")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_0phho"]
atlas = ExtResource("5_u6hli")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvstd"]
atlas = ExtResource("5_u6hli")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_uuj4r"]
atlas = ExtResource("6_1uuf7")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_618rg"]
atlas = ExtResource("6_1uuf7")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_iu0fv"]
atlas = ExtResource("6_1uuf7")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3fkf"]
atlas = ExtResource("6_1uuf7")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7kod"]
atlas = ExtResource("6_1uuf7")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ys3m2"]
atlas = ExtResource("6_1uuf7")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7osl"]
atlas = ExtResource("6_1uuf7")
region = Rect2(576, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_5xv2r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjmsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2u5db")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ad501")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wcy3")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqgp8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mfta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a24o2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ytk7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_koum7")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vacyg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uyyve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xeqv")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i77ns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7la3g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yatc6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0phho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvstd")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uuj4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_618rg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iu0fv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3fkf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7kod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ys3m2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7osl")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w5xkg"]
size = Vector2(23, 48)

[sub_resource type="Animation" id="Animation_qqfva"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"dead"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D/AttackArea2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MissSound:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_pbtcf"]
resource_name = "attack"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D/AttackArea2D/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MissSound:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ag8df"]
resource_name = "dead"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"dead"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_6pa8i"]
resource_name = "hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"hurt"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_0exer"]
resource_name = "idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_3vk62"]
resource_name = "run"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uorcu"]
_data = {
"RESET": SubResource("Animation_qqfva"),
"attack": SubResource("Animation_pbtcf"),
"dead": SubResource("Animation_ag8df"),
"hurt": SubResource("Animation_6pa8i"),
"idle": SubResource("Animation_0exer"),
"run": SubResource("Animation_3vk62")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3jfvi"]
size = Vector2(1386, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1io5t"]
size = Vector2(66, 20)

[node name="EnemyFast" type="CharacterBody2D"]
scale = Vector2(2, 2)
collision_layer = 2
collision_mask = 0
script = ExtResource("1_s0cnt")
speed = 300
max_health = 20
attack_power = 5

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_12qmh")
volume_db = -10.0

[node name="MissSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_t6bur")
volume_db = -10.0

[node name="DeadSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_37lhw")
volume_db = -10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_kimi3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_5xv2r")
animation = &"dead"

[node name="AttackArea2D" type="Area2D" parent="AnimatedSprite2D"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/AttackArea2D"]
position = Vector2(21.5, 10)
shape = SubResource("RectangleShape2D_w5xkg")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uorcu")
}
autoplay = "idle"

[node name="Healthbar" type="ProgressBar" parent="."]
modulate = Color(1, 0, 1, 1)
offset_left = -12.0
offset_top = 32.0
offset_right = 12.0
offset_bottom = 37.0
value = 60.0
show_percentage = false

[node name="PlayerDettectionArea2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDettectionArea2D"]
shape = SubResource("RectangleShape2D_3jfvi")

[node name="AttackDettectionArea2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDettectionArea2D"]
shape = SubResource("RectangleShape2D_1io5t")

[connection signal="body_entered" from="AnimatedSprite2D/AttackArea2D" to="." method="_on_attack_area_2d_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="PlayerDettectionArea2D" to="." method="_on_player_dettection_area_2d_body_entered"]
[connection signal="body_exited" from="PlayerDettectionArea2D" to="." method="_on_player_dettection_area_2d_body_exited"]
[connection signal="body_entered" from="AttackDettectionArea2D" to="." method="_on_attack_dettection_area_2d_body_entered"]
[connection signal="body_exited" from="AttackDettectionArea2D" to="." method="_on_attack_dettection_area_2d_body_exited"]
